platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/flagexpr1.platter
# flag of a = id and (1+2) != (1>3); not invalid syntactically in after 1st defense cfg
# start(){}